--- a/Blog.DataAccess/Blog.DataAccess.csproj
+++ b/Blog.DataAccess/Blog.DataAccess.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Models\Entity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BlogRespository.cs" />
+    <Compile Include="Repository\IBlogRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
